Fixed z-index bug

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -36,7 +36,7 @@ $small-device: 450px;
   right: 20px;
   bottom: 20px;
   overflow: hidden;
-  z-index: 10000;
+  z-index: 1000;
   box-shadow: -0.5em -0.3rem 1rem rgba(0, 0, 0, 0.575) !important;
 
   @media (max-width: $small-device) {
